# sonic-pipe

./: Cargo.toml  LICENSE  README.md
docs/: CNAME  index.html  styles.css
src/: audio.rs  codec.rs  error.rs  lib.rs  main.rs  modulation.rs  protocol.rs  wasm.rs
web/: app.js  sonic-pipe.js
