[package]
name = "sonic-pipe"
version = "0.1.0"
edition = "2021"
description = "Acoustic modem for air-gapped data transfer using MFSK modulation"
license = "MIT"
authors = ["Sonic-Pipe Contributors"]

[[bin]]
name = "sonic-pipe"
path = "src/main.rs"

[lib]
name = "sonic_pipe_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
cpal = "0.15"
anyhow = "1.0"
thiserror = "1.0"
reed-solomon-erasure = "6.0"
lz4_flex = "0.11"
rustfft = "6.1"
byteorder = "1.5"
crc32fast = "1.3"
log = "0.4"
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "AudioContext",
    "AudioWorkletNode",
    "AudioWorkletProcessor",
    "AudioDestinationNode",
    "OscillatorNode",
    "GainNode",
    "MediaDevices",
    "MediaStreamConstraints",
    "Navigator",
    "Window",
    "AnalyserNode",
] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 3
lto = true
